--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+xscopes-qt (0.0.0-0) unstable; urgency=medium
+
+  * wip:
+
+ -- Philippe Coval <rzr@users.sf.net>  Sat, 29 Sep 2018 23:40:21 +0200
+
 xscopes-qt (0.0.0-1) unstable; urgency=low
 
   * Initial release (Closes: #nnnn)  <nnnn is the bug number of your ITP>
